# stuyEscalator

./: main.py  pyproject.toml  requirements.txt
static/css/: index.css
static/js/: index.js
templates/: index.html
